Quorum3/Library/Tests/Actions/Pass/SimpleNestedActions.quorum
class Main
    action Main
       integer a = GetInteger1()
       output a
    end

    action GetInteger1 returns integer
        return GetInteger2(5)
    end

    action GetInteger2(integer x) returns integer
        return x * x * x
    end

end