Quorum3/Library/Tests/Actions/Fail/HOCReturnIntFromCalledProcedureWrongType2.quorum
action Main
    text a
    a = B()
end

action B returns text
    return 3
end